--- a/Portfolio/front.css
+++ b/Portfolio/front.css
@@ -1,14 +1,19 @@
 #wrapper{
   margin: 1em auto;
   padding: 10px;
-  background-color: black;
+  background-color: transparent;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-columns: repeat(12, 1fr);
 }
 
 body {
-  background-color: #000000;
+  background-color: #4d3a5e;
+    background-image: url("space2.jpg");
+    background-blend-mode: overlay;
+    background-attachment: fixed;
+    background-size: contain;
+    backdrop-filter: blur(1px);
   padding: 10px;
 }
 
@@ -18,7 +23,7 @@ header {
   background-repeat: no-repeat;
   background-position: top center;
   text-align: center;
-  color: white;
+  color: #f9ddff;
   height: 600px;
 }
 
@@ -67,17 +72,16 @@ nav li {
 
 nav li a {
   display: block;
-  background-color: white;
-  border: 3px solid black;
+  background-color: #edc7ff;
   padding: 1em;
-  color: black;
+  color: #300936;
   text-decoration: none;
   font-size: 30px;
   border-radius: 100px;
   transition: background-color 1.0s;
 }
 nav a:hover {
-  background-color: #c97aff;
+  background-color: #7e1297;
 }
 
 main {
@@ -86,14 +90,17 @@ main {
   display: inline;
   text-align: center;
   margin:auto;
-  background-color: black;
+  background-color: #00000090;
+  padding: 0px;
+  font-family: Helvetica, sans-serif;
 }
 
 img.left {
   float:left;
   display: inline;
-  padding: 50px;
+  margin: 50px;
 }
+
 img.right {
   float: right;
   display: inline;
@@ -103,9 +110,10 @@ img.right {
 .about {
   margin-left: 380px;
   margin-right: 380px;
+  margin-top: 40px;
   height: 180px;
   padding-top: 10px;
-  background-color: white;
+  background-color: #f9ddff;
   border-radius: 20px;
 }
 
@@ -121,6 +129,7 @@ footer {
   text-align: center;
   padding-top: 50px;
   border-top: 1px solid gray;
+  margin-top: 50px;
 }
 
 iframe {
@@ -129,4 +138,17 @@ iframe {
   margin:auto;
   padding-bottom: 50px;
 
+}
+
+.comm {
+  grid-column: span 12;
+  width: 1300px;
+  display: inline;
+  text-align: center;
+  margin: auto;
+  background-color: #00000090;
+  padding: 0px;
+  color: white;
+  padding: 50px;
+  font-family: Helvetica, sans-serif;
 }
